--- a/style.css
+++ b/style.css
@@ -1,23 +1,22 @@
 body {
-  background-image: url("https://wallpapers-clan.com/wp-content/uploads/2024/11/chill-guy-background.jpg");
+  background-image: url("https://cdn.loveandlemons.com/wp-content/uploads/2020/05/everything-bagel-seasoning.jpg");
   text-align: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed; 
+  background-attachment: fixed;
   margin-top: 10%;
 }
 
-html{
+html {
   height: 100%;
   width: 100%;
 }
 
 #myCanvas {
   border-radius: 30px;
-  border: 15px double #8bbcbbff;
 }
 
-.container{
+.container {
   display: flex;
   flex-wrap: wrap;
   background-color: white;
@@ -25,22 +24,21 @@ html{
   align-items: flex-start;
 }
 
-.pic{
+.pic {
   height: 400px;
   width: 400px;
   object-fit: cover;
   border-radius: 30px;
-  border: 15px double #8bbcbbff;
 }
 
-h2{
-  color: black;
+h2 {
+  color: tan;
 }
 
-#start{
+#start {
   text-align: left;
 }
 
-#end{
+#end {
   text-align: right;
 }
